# kirara-ai

./: .gitignore  README.md  alembic.ini  dummy.txt  dummy.yaml  new.txt  problematic.json  problematic_alternative.json  problematic_json_creator.py  pyproject.toml  test_password.hash
.github/workflows/: pr_review.yml  project_check.yml  run-tests.yml
data/workflows/chat/: dsr_thinking.yaml
examples/: media_example.py
kirara_ai/: __main__.py  entry.py  logger.py
kirara_ai/alembic/: env.py
kirara_ai/config/: __init__.py  config_loader.py  global_config.py
kirara_ai/database/: __init__.py  manager.py
kirara_ai/events/: event_bus.py  im.py  llm.py
kirara_ai/im/: adapter.py  im_registry.py  manager.py  message.py  sender.py
kirara_ai/ioc/: container.py  inject.py
kirara_ai/llm/: adapter.py  llm_manager.py  llm_registry.py  model_types.py
kirara_ai/mcp/: manager.py  server.py
kirara_ai/mcp_module/: manager.py  server.py
kirara_ai/media/: __init__.py  manager.py  media.py  media_object.py  metadata.py
kirara_ai/memory/: memory_manager.py  registry.py
kirara_ai/plugin_manager/: plugin_loader.py  utils.py
kirara_ai/tracing/: __init__.py  core.py  decorator.py  llm_tracer.py  manager.py  models.py
kirara_ai/web/: app.py  utils.py
tests/: test_game_blocks.py  test_mcp_server.py  test_media.py  test_media_element.py  test_voyage.py
tests/llm_adapters/: __init__.py  conftest.py  test_gemini_adapter.py  test_ollama_adapter.py  test_openai_adapter.py  test_voyage_adapter.py
tests/memory/: test_composer_decomposer.py  test_composer_strategy.py  test_decomposer_strategy.py  test_memory_manager.py
tests/tracing/: __init__.py  test_base.py  test_core.py  test_decorator.py  test_llm_tracer.py  test_manager.py  test_models.py
tests/workflow_executor/: test_executor.py
(+118 files in other folders)
